fixed body scrollbar disappear bug when bootsrap modal opens

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3470,7 +3470,7 @@ button.close {
 }
 
 .modal-open {
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .modal {
